--- a/family_sign-in.html
+++ b/family_sign-in.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="author" content="Ryan Flynn Tyson-Hurley">
 
 	<title>Family Sign-in | Student-led Conferences</title>
-	<link rel="icon" type="image/png" sizes="96x96" href="scsc-favicon.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="images/scsc-favicon.png">
 	
 	<style>
 	/* ************************ */
@@ -118,7 +119,7 @@
 <body>
 	<header>
 		<a href="/">
-			<img src="scsc-logo.png" height="80px" alt="The Surf Coast Secondary College logo; two waves inside a double-bordered circle.">
+			<img src="images/scsc-logo.png" height="80px" alt="The Surf Coast Secondary College logo; two waves inside a double-bordered circle.">
 		</a>
 		<h1>Student-led Conferences</h1>
 	</header>
