Updated image paths

--- a/design_criteria.html
+++ b/design_criteria.html
@@ -1074,7 +1074,7 @@
             <a class="self-link" href="#1.1"></a></h3>
             <p>To familiarise the user with the interface, the Surf Coast Secondary College logo is used as the base of the design. The primary, secondary and tertiary colours of the logo decide the base colours of the design while the subsequent three compliment the designs use of the base colours:</p>
             <figure>
-                <img src="scsc-logo.png" width="100px" height="100px">
+                <img src="images/scsc-logo.png" width="100px" height="100px">
             </figure>
             <figure>
                 <div class="color" style="background-color: #0F9187;"><span>#0F9187</span></div>
@@ -1124,11 +1124,11 @@
             <a class="self-link" href="#2.1"></a></h3>
             <p>The Student-led Conferences sign-in screen mock-ups below illustrate a comparison between a simple design and one with a "clutter" of interface:</p>
             <figure>
-                <img src="User Interface/Sign-in Screen Mock-up 1.png" alt="Sign-in Screen Mock-up 1">
+                <img src="images/Sign-in_screen_mock-up_1.png" alt="Sign-in Screen Mock-up 1">
                 <figcaption class="mock-up">This design displays the primary design goals of the project and follows the principles of the Design Criteria.</figcaption>
             </figure>
             <figure>
-                <img src="User Interface/Sign-in Screen Mock-up 2.png" alt="Sign-in Screen Mock-up 2" style="border: 1px solid silver;">
+                <img src="images/Sign-in_screen_mock-up_2.png" alt="Sign-in Screen Mock-up 2" style="border: 1px solid silver;">
                 <figcaption class="mock-up">While this design shows promise by following most of the design prinicples, it "clutters" the interface with areas that are irrelevant to the user and the form.</figcaption>
             </figure>
 
@@ -1136,7 +1136,7 @@
             <a class="self-link" href="#2.1"></a></h3>
             <p>This design presents all the information the user requires in a single module. Ideas are expressed to the user through actions; when the user hovers over a teacher, that section becomes highlighted - they are presented with a 'reaction' for their 'action'.</p>
             <figure>
-                <img src="User Interface/Annotated Teacher Select Screen.png" alt="Teacher Select Screen">
+                <img src="images/Annotated_teacher_select_screen.png" alt="Teacher Select Screen">
                 <figcaption class="mock-up">This design shows an interface node.</figcaption>
             </figure>
             <p>Various areas of this module are designed to be interactable; clicking on the name of the student will present the option to change to another student. These areas are not required to complete the experience but for the user, they create the feeling of discoverability, the user feels as though they are learning with the system.</p>
